--- a/.github/workflows/top-action.yml
+++ b/.github/workflows/top-action.yml
@@ -10,13 +10,19 @@ jobs:
     name: Github Active Users
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
           token: ${{ secrets.CUSTOM_TOKEN }}
-      - uses: actions/setup-node@v3
+
+      - name: Setup Nodejs
+        uses: actions/setup-node@v3
         with:
           node-version: 14.17.0
-      - uses: gayanvoice/top-github-users-action@master
+          cache: 'npm'
+
+      - name: Top Github Users Action
+        uses: gayanvoice/top-github-users-action@master
         env:
           CUSTOM_TOKEN: ${{ secrets.CUSTOM_TOKEN }}
